# uv-myproject

./: README.md  main.py  pyproject.toml
